fix article alignments

--- a/src/styles/pricing/article-explanation.scss
+++ b/src/styles/pricing/article-explanation.scss
@@ -1,7 +1,7 @@
 .article-explanation {
   align-self: center;
   border-bottom: 1px solid $gray-lighter;
-  max-width: 960px;
+  max-width: 1080px;
   padding-bottom: 90px;
   padding-top: 90px;
 
