--- a/src/styles/pricing/article-included.scss
+++ b/src/styles/pricing/article-included.scss
@@ -5,7 +5,7 @@
   overflow: visible;
   padding-bottom: 90px;
   padding-top: 90px;
-  width: 960px;
+  width: 1080px;
 
   @include media(xs) {
     flex-direction: column-reverse;
